--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8082
 spring.application.name=userservice
+
+spring.datasource.url=jdbc:h2:mem:userdb
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+
